--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" href="{{url_for('static', filename='stylesheets/main.css')}}"> -->
-    <link rel="stylesheet" href="../static/stylesheets/main.css">
+    <link rel="stylesheet" href="static/stylesheets/main.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -13,7 +13,7 @@
     <div class="ibm-nav">
       <a class="navigation" href="index.html">
         <div class="ibm-home">
-          <img src="../static/images/ibm_logo.png" class="img-fluid">
+          <img src="static/images/ibm_logo.png" class="img-fluid">
         </div>
       </a>
       <div class="ibm-parent-site-name">
@@ -36,9 +36,9 @@
                <button type="submit" id="upload_file" disabled>Upload</button>
              </div>
              <div class="formats">
-               <img src="../static/images/doc.png" class="doc-icon">
-               <img src="../static/images/docx.png" class="docx-icon">
-               <img src="../static/images/pdf.png" class="pdf-icon">
+               <img src="static/images/doc.png" class="doc-icon">
+               <img src="static/images/docx.png" class="docx-icon">
+               <img src="static/images/pdf.png" class="pdf-icon">
                <h1>SUPPORTED FORMATS</h1>
              </div>
           </div>
