--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
     <title>Results</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../static/stylesheets/results.css">
+    <link rel="stylesheet" href="static/stylesheets/results.css">
     <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/results.css') }}"/> -->
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
   </head>
@@ -13,7 +13,7 @@
     <div class="ibm-nav">
       <a class="navigation" href="index.html">
         <div class="ibm-home">
-          <img src="../static/images/ibm_logo.png" class="img-fluid">
+          <img src="static/images/ibm_logo.png" class="img-fluid">
         </div>
       </a>
       <div class="ibm-parent-site-name">
@@ -25,7 +25,7 @@
 
     <p id="showData"></p>
 
-  <script src="../static/javascript/results.js"></script>
+  <script src="static/javascript/results.js"></script>
   <!-- <script type="text/javascript">
   const myData = {{data}};
   </script> -->
